Can delete a task

--- a/index.html
+++ b/index.html
@@ -10,15 +10,20 @@
 <script src="js/app.js"></script>
 
 </head>
-<body ng-controller='ToDoListController as todo'>
-  Hello world
-  <div id='list' ng-repeat='tasks in todo.list'>
-    {{ tasks.task }}
+<center><body ng-controller='ToDoListController as todo'>
+  To Do
+  <div id='list' ng-repeat='tasks in todo.list' ng-model='todo.item'>
+    <li >
+      {{ tasks.task }} : {{ tasks.status }} <input type='checkbox' class='checkbox' ng-model='todo.markComplete[tasks.task]'>
+    </li>
   </div>
   <div>
     Add a task here:
     <input type='text' ng-model='todo.newTask'>
     <button id='addtask' type='submit' ng-click='todo.addTask();'>Add</button>
+    <button id='completetask' type='submit' ng-click='todo.completeTask();'>Complete</button>
+    <button id='deletetask' type='submit' ng-click='todo.deleteTask();'>Delete</button>
+
   </div>
-</body>
+</body></center>
 </html>
