--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>ToDo List</title>
 <head>
 
-<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+<link rel="stylesheet" href="style.css">
 <script src="bower_components/jquery/dist/jquery.js"></script>
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-resource/angular-resource.js"></script>
@@ -11,20 +11,53 @@
 
 </head>
 <center><body ng-controller='ToDoListController as todo'>
-  To Do
-  <div id='list' ng-repeat='tasks in todo.list' ng-model='todo.item'>
-    {{ tasks.task }} {{ tasks.status }} <input type='checkbox' class='checkbox' ng-model='todo.markComplete[tasks.task]'>
+  <div class='jumbotron'>
+    <h1><center>To Do List</center></h1>
   </div>
-  <div id='total' ng-model='todo.taskNumber'>
-    {{ todo.taskNumber }} Tasks Active
+
+  <div class="row">
+    <div class="col-md-4"></div>
+    <div class="col-md-4">
+      <table class="table table-striped table-hover" id='list'>
+        <thead>
+          <tr>
+            <th></th>
+            <th><h3>Tasks</h3></th>
+            <th><h3>Status</h3></th>
+          </tr>
+        </thead>
+        <tbody ng-repeat='tasks in todo.list' ng-model='todo.item'>
+          <tr>
+            <td><input type='checkbox' class='checkbox' ng-model='todo.markComplete[tasks.task]'></td>
+            <td>{{ tasks.task }}</td>
+            <td><i> {{ tasks.status }} </i></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="col-md-4"></div>
   </div>
-  <div>
-    Add a task here:
-    <input type='text' ng-model='todo.newTask'>
-    <button id='addtask' type='submit' ng-click='todo.addTask(); todo.newTask = null;'>Add</button>
-    <button id='completetask' type='submit' ng-click='todo.completeTask();'>Complete</button>
-    <button id='deletetask' type='submit' ng-click='todo.deleteTask();'>Delete</button>
-    <button id='clearcompleted' type='submit' ng-click='todo.clearCompleted();'>Clear Completed</button>
+  <br>
+  <div class="form-group">
+    <div class="col-md-4"></div>
+
+    <div class="col-md-4"><label class="control-label" for="focusedInput">
+      <h3>Add a task...</h3></label>
+      <input class="form-control" id="focusedInput" type="text" ng-model='todo.newTask'>
+      <br>
+      <br>
+      <button id='addtask' class="btn btn-success" type='submit' ng-click='todo.addTask(); todo.newTask = null;'>Add</button>
+      <button id='completetask' class="btn btn-success" type='submit' ng-click='todo.completeTask();'>Complete</button>
+      <button id='deletetask' class="btn btn-success" type='submit' ng-click='todo.deleteTask();'>Delete</button>
+      <button id='clearcompleted' class="btn btn-success" type='submit' ng-click='todo.clearCompleted();'>Clear Completed</button>
+      <br>
+      <br>
+      <div id='total' ng-model='todo.taskNumber'>
+        <h4> {{ todo.taskNumber }} Tasks Active </h4>
+      </div>
+    </div>
+
+    <div class="col-md-4"></div>
   </div>
 </body></center>
 </html>
