--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 
 </head>
 <center><body ng-controller='ToDoListController as todo'>
-  <div class='jumbotron'>
-    <h1><center>To Do List</center></h1>
-  </div>
+  <h1><center>To Do List</center></h1>
 
   <div class="row">
     <div class="col-md-4"></div>
@@ -42,8 +40,7 @@
     <div class="col-md-4"></div>
 
     <div class="col-md-4"><label class="control-label" for="focusedInput">
-      <h3>Add a task...</h3></label>
-      <input class="form-control" id="focusedInput" type="text" ng-model='todo.newTask'>
+      <input class="form-control" id="focusedInput" type="text" placeholder='Add a task...' ng-model='todo.newTask'>
       <br>
       <br>
       <button id='addtask' class="btn btn-success" type='submit' ng-click='todo.addTask(); todo.newTask = null;'>Add</button>
