--- a/index.html
+++ b/index.html
@@ -12,10 +12,19 @@
 </head>
 <center><body ng-controller='ToDoListController as todo'>
   <h1><center>To Do List</center></h1>
-
+  <br>
+<div class="form-group">
   <div class="row">
     <div class="col-md-4"></div>
     <div class="col-md-4">
+      <label class="control-label" for="focusedInput">
+      <input class="form-control" id="focusedInput" type="text" placeholder='Add a task...' ng-model='todo.newTask'>
+      <br>
+      <button id='addtask' class="btn btn-success" type='submit' ng-click='todo.addTask(); todo.newTask = null;'>Add</button>
+      <button id='completetask' class="btn btn-success" type='submit' ng-click='todo.completeTask();'>Complete</button>
+      <button id='deletetask' class="btn btn-success" type='submit' ng-click='todo.deleteTask();'>Delete</button>
+      <button id='clearcompleted' class="btn btn-success" type='submit' ng-click='todo.clearCompleted();'>Clear Completed</button>
+      <br>
       <table class="table table-striped table-hover" id='list'>
         <thead>
           <tr>
@@ -32,29 +41,12 @@
           </tr>
         </tbody>
       </table>
-    </div>
-    <div class="col-md-4"></div>
-  </div>
-  <br>
-  <div class="form-group">
-    <div class="col-md-4"></div>
-
-    <div class="col-md-4"><label class="control-label" for="focusedInput">
-      <input class="form-control" id="focusedInput" type="text" placeholder='Add a task...' ng-model='todo.newTask'>
-      <br>
-      <br>
-      <button id='addtask' class="btn btn-success" type='submit' ng-click='todo.addTask(); todo.newTask = null;'>Add</button>
-      <button id='completetask' class="btn btn-success" type='submit' ng-click='todo.completeTask();'>Complete</button>
-      <button id='deletetask' class="btn btn-success" type='submit' ng-click='todo.deleteTask();'>Delete</button>
-      <button id='clearcompleted' class="btn btn-success" type='submit' ng-click='todo.clearCompleted();'>Clear Completed</button>
-      <br>
-      <br>
       <div id='total' ng-model='todo.taskNumber'>
         <h4> {{ todo.taskNumber }} Tasks Active </h4>
       </div>
     </div>
-
     <div class="col-md-4"></div>
   </div>
+</div>
 </body></center>
 </html>
