--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <title>ToDo List</title>
 <head>
 
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="css/style.css">
 <script src="bower_components/jquery/dist/jquery.js"></script>
 <script src="bower_components/angular/angular.js"></script>
-<script src="bower_components/angular-resource/angular-resource.js"></script>
 <script src="js/app.js"></script>
 
 </head>
